--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /*! bulma.io v0.9.4 | MIT License | github.com/jgthms/bulma */
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css";
 .button,
 .file-cta,
 .file-name,
